--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -8,13 +8,13 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="8">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">3</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">31,687</td><td></td><td></td></tr>
+<tr><th colspan="8">FreeCRMAutomationTestSuite</th></tr>
+<tr><td><a href="#t0">FreeCRMApplicationTestcases</a></td><td class="num">3</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">79,107</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="3">com.crm.qa.testcases.LoginPageTest</td><td><a href="#m0">loginPageTitleTest</a></td><td rowspan="1">1673354431406</td><td rowspan="1">9</td></tr><tr class="passedeven"><td><a href="#m1">loginTest</a></td><td rowspan="1">1673354444009</td><td rowspan="1">9185</td></tr><tr class="passedeven"><td><a href="#m2">validateCRMLogoTest</a></td><td rowspan="1">1673354437725</td><td rowspan="1">31</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">FreeCRMAutomationTestSuite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">FreeCRMApplicationTestcases &#8212; passed</th></tr><tr class="passedeven"><td rowspan="3">com.crm.qa.testcases.HomePageTest</td><td><a href="#m0">verifyContactsLinkTest</a></td><td rowspan="1">1675274779778</td><td rowspan="1">2734</td></tr><tr class="passedeven"><td><a href="#m1">verifyCorrectUsername</a></td><td rowspan="1">1675274755983</td><td rowspan="1">49</td></tr><tr class="passedeven"><td><a href="#m2">verifyHomePageTitleTest</a></td><td rowspan="1">1675274729944</td><td rowspan="1">7</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">com.crm.qa.testcases.LoginPageTest#loginPageTitleTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">com.crm.qa.testcases.LoginPageTest#loginTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">com.crm.qa.testcases.LoginPageTest#validateCRMLogoTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>FreeCRMApplicationTestcases</h2><h3 id="m0">com.crm.qa.testcases.HomePageTest#verifyContactsLinkTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">com.crm.qa.testcases.HomePageTest#verifyCorrectUsername</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">com.crm.qa.testcases.HomePageTest#verifyHomePageTitleTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
