--- a/test-output/old/FreeCRMAutomationTestSuite/methods-alphabetical.html
+++ b/test-output/old/FreeCRMAutomationTestSuite/methods-alphabetical.html
@@ -1,22 +1,76 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>FreeCRMAutomationTestSuite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a8a16a">  <td>23/02/01 23:35:56</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePageTest.setup()[pri:0, instance:com.crm.qa.testcases.HomePageTest@235ecd9f]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@2142565033</td>   <td></td> </tr>
-<tr bgcolor="a8a16a">  <td>23/02/01 23:35:56</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePageTest.setup()[pri:0, instance:com.crm.qa.testcases.HomePageTest@235ecd9f]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@2142565033</td>   <td></td> </tr>
-<tr bgcolor="a8a16a">  <td>23/02/01 23:35:56</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePageTest.setup()[pri:0, instance:com.crm.qa.testcases.HomePageTest@235ecd9f]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@2142565033</td>   <td></td> </tr>
-<tr bgcolor="a8a16a">  <td>23/02/01 23:36:22</td>   <td>26372</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HomePageTest.teardown()[pri:0, instance:com.crm.qa.testcases.HomePageTest@235ecd9f]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td>  <td>main@2142565033</td>   <td></td> </tr>
-<tr bgcolor="a8a16a">  <td>23/02/01 23:36:22</td>   <td>26372</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HomePageTest.teardown()[pri:0, instance:com.crm.qa.testcases.HomePageTest@235ecd9f]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td>  <td>main@2142565033</td>   <td></td> </tr>
-<tr bgcolor="a8a16a">  <td>23/02/01 23:36:22</td>   <td>26372</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HomePageTest.teardown()[pri:0, instance:com.crm.qa.testcases.HomePageTest@235ecd9f]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td>  <td>main@2142565033</td>   <td></td> </tr>
-<tr bgcolor="a8a16a">  <td>23/02/01 23:36:19</td>   <td>23636</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.verifyContactsLinkTest()[pri:3, instance:com.crm.qa.testcases.HomePageTest@235ecd9f]">verifyContactsLinkTest</td> 
-  <td>main@2142565033</td>   <td></td> </tr>
-<tr bgcolor="a8a16a">  <td>23/02/01 23:35:55</td>   <td>-158</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.verifyCorrectUsername()[pri:2, instance:com.crm.qa.testcases.HomePageTest@235ecd9f]">verifyCorrectUsername</td> 
-  <td>main@2142565033</td>   <td></td> </tr>
-<tr bgcolor="a8a16a">  <td>23/02/01 23:35:29</td>   <td>-26197</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.verifyHomePageTitleTest()[pri:1, instance:com.crm.qa.testcases.HomePageTest@235ecd9f]">verifyHomePageTitleTest</td> 
-  <td>main@2142565033</td>   <td></td> </tr>
+<tr bgcolor="a8a16a">  <td>23/02/02 00:32:39</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginPageTitleTest()[pri:1, instance:com.crm.qa.testcases.LoginPageTest@1de5f259]">loginPageTitleTest</td> 
+  <td>main@106999035</td>   <td></td> </tr>
+<tr bgcolor="a8a16a">  <td>23/02/02 00:33:00</td>   <td>20549</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginTest()[pri:3, instance:com.crm.qa.testcases.LoginPageTest@1de5f259]">loginTest</td> 
+  <td>main@106999035</td>   <td></td> </tr>
+<tr bgcolor="7465a0">  <td>23/02/02 00:35:18</td>   <td>158974</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContactsPageTest.selectContactsTest()[pri:2, instance:com.crm.qa.testcases.ContactsPageTest@359df09a]">selectContactsTest</td> 
+  <td>main@106999035</td>   <td></td> </tr>
+<tr bgcolor="7465a0">  <td>23/02/02 00:35:44</td>   <td>185345</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContactsPageTest.selectMultiple()[pri:3, instance:com.crm.qa.testcases.ContactsPageTest@359df09a]">selectMultiple</td> 
+  <td>main@106999035</td>   <td></td> </tr>
+<tr bgcolor="a8a16a">  <td>23/02/02 00:32:50</td>   <td>10612</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUp()[pri:0, instance:com.crm.qa.testcases.LoginPageTest@1de5f259]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@106999035</td>   <td></td> </tr>
+<tr bgcolor="a8a16a">  <td>23/02/02 00:32:50</td>   <td>10612</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUp()[pri:0, instance:com.crm.qa.testcases.LoginPageTest@1de5f259]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@106999035</td>   <td></td> </tr>
+<tr bgcolor="a8a16a">  <td>23/02/02 00:32:50</td>   <td>10612</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUp()[pri:0, instance:com.crm.qa.testcases.LoginPageTest@1de5f259]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@106999035</td>   <td></td> </tr>
+<tr bgcolor="f170ad">  <td>23/02/02 00:34:01</td>   <td>81551</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePageTest.setup()[pri:0, instance:com.crm.qa.testcases.HomePageTest@17fc391b]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@106999035</td>   <td></td> </tr>
+<tr bgcolor="f170ad">  <td>23/02/02 00:34:01</td>   <td>81551</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePageTest.setup()[pri:0, instance:com.crm.qa.testcases.HomePageTest@17fc391b]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@106999035</td>   <td></td> </tr>
+<tr bgcolor="7465a0">  <td>23/02/02 00:36:51</td>   <td>251436</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ContactsPageTest.setup()[pri:0, instance:com.crm.qa.testcases.ContactsPageTest@359df09a]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@106999035</td>   <td></td> </tr>
+<tr bgcolor="7465a0">  <td>23/02/02 00:36:51</td>   <td>251436</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ContactsPageTest.setup()[pri:0, instance:com.crm.qa.testcases.ContactsPageTest@359df09a]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@106999035</td>   <td></td> </tr>
+<tr bgcolor="7465a0">  <td>23/02/02 00:36:51</td>   <td>251436</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ContactsPageTest.setup()[pri:0, instance:com.crm.qa.testcases.ContactsPageTest@359df09a]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@106999035</td>   <td></td> </tr>
+<tr bgcolor="7465a0">  <td>23/02/02 00:36:51</td>   <td>251436</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ContactsPageTest.setup()[pri:0, instance:com.crm.qa.testcases.ContactsPageTest@359df09a]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@106999035</td>   <td></td> </tr>
+<tr bgcolor="7465a0">  <td>23/02/02 00:36:51</td>   <td>251436</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ContactsPageTest.setup()[pri:0, instance:com.crm.qa.testcases.ContactsPageTest@359df09a]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@106999035</td>   <td></td> </tr>
+<tr bgcolor="7465a0">  <td>23/02/02 00:36:51</td>   <td>251436</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ContactsPageTest.setup()[pri:0, instance:com.crm.qa.testcases.ContactsPageTest@359df09a]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@106999035</td>   <td></td> </tr>
+<tr bgcolor="f170ad">  <td>23/02/02 00:34:01</td>   <td>81551</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePageTest.setup()[pri:0, instance:com.crm.qa.testcases.HomePageTest@17fc391b]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@106999035</td>   <td></td> </tr>
+<tr bgcolor="a8a16a">  <td>23/02/02 00:33:13</td>   <td>33895</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.crm.qa.testcases.LoginPageTest@1de5f259]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@106999035</td>   <td></td> </tr>
+<tr bgcolor="a8a16a">  <td>23/02/02 00:33:13</td>   <td>33895</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.crm.qa.testcases.LoginPageTest@1de5f259]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@106999035</td>   <td></td> </tr>
+<tr bgcolor="a8a16a">  <td>23/02/02 00:33:13</td>   <td>33895</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.crm.qa.testcases.LoginPageTest@1de5f259]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@106999035</td>   <td></td> </tr>
+<tr bgcolor="f170ad">  <td>23/02/02 00:34:27</td>   <td>107807</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HomePageTest.teardown()[pri:0, instance:com.crm.qa.testcases.HomePageTest@17fc391b]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td>  <td>main@106999035</td>   <td></td> </tr>
+<tr bgcolor="7465a0">  <td>23/02/02 00:37:21</td>   <td>281447</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ContactsPageTest.teardown()[pri:0, instance:com.crm.qa.testcases.ContactsPageTest@359df09a]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td>  <td>main@106999035</td>   <td></td> </tr>
+<tr bgcolor="7465a0">  <td>23/02/02 00:37:21</td>   <td>281447</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ContactsPageTest.teardown()[pri:0, instance:com.crm.qa.testcases.ContactsPageTest@359df09a]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td>  <td>main@106999035</td>   <td></td> </tr>
+<tr bgcolor="7465a0">  <td>23/02/02 00:37:21</td>   <td>281447</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ContactsPageTest.teardown()[pri:0, instance:com.crm.qa.testcases.ContactsPageTest@359df09a]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td>  <td>main@106999035</td>   <td></td> </tr>
+<tr bgcolor="7465a0">  <td>23/02/02 00:37:21</td>   <td>281447</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ContactsPageTest.teardown()[pri:0, instance:com.crm.qa.testcases.ContactsPageTest@359df09a]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td>  <td>main@106999035</td>   <td></td> </tr>
+<tr bgcolor="7465a0">  <td>23/02/02 00:37:21</td>   <td>281447</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ContactsPageTest.teardown()[pri:0, instance:com.crm.qa.testcases.ContactsPageTest@359df09a]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td>  <td>main@106999035</td>   <td></td> </tr>
+<tr bgcolor="f170ad">  <td>23/02/02 00:34:27</td>   <td>107807</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HomePageTest.teardown()[pri:0, instance:com.crm.qa.testcases.HomePageTest@17fc391b]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td>  <td>main@106999035</td>   <td></td> </tr>
+<tr bgcolor="f170ad">  <td>23/02/02 00:34:27</td>   <td>107807</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HomePageTest.teardown()[pri:0, instance:com.crm.qa.testcases.HomePageTest@17fc391b]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td>  <td>main@106999035</td>   <td></td> </tr>
+<tr bgcolor="7465a0">  <td>23/02/02 00:37:21</td>   <td>281447</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ContactsPageTest.teardown()[pri:0, instance:com.crm.qa.testcases.ContactsPageTest@359df09a]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td>  <td>main@106999035</td>   <td></td> </tr>
+<tr bgcolor="a8a16a">  <td>23/02/02 00:32:50</td>   <td>10472</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.validateCRMLogoTest()[pri:2, instance:com.crm.qa.testcases.LoginPageTest@1de5f259]">validateCRMLogoTest</td> 
+  <td>main@106999035</td>   <td></td> </tr>
+<tr bgcolor="7465a0">  <td>23/02/02 00:37:14</td>   <td>275034</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContactsPageTest.validateCreateNewContactTest(java.lang.String,java.lang.String,java.lang.String,java.lang.String)[pri:4, instance:com.crm.qa.testcases.ContactsPageTest@359df09a]">validateCreateNewContactTest</td> 
+  <td>main@106999035</td>   <td></td> </tr>
+<tr bgcolor="7465a0">  <td>23/02/02 00:37:14</td>   <td>275034</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContactsPageTest.validateCreateNewContactTest(java.lang.String,java.lang.String,java.lang.String,java.lang.String)[pri:4, instance:com.crm.qa.testcases.ContactsPageTest@359df09a]">validateCreateNewContactTest</td> 
+  <td>main@106999035</td>   <td></td> </tr>
+<tr bgcolor="7465a0">  <td>23/02/02 00:37:14</td>   <td>275034</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContactsPageTest.validateCreateNewContactTest(java.lang.String,java.lang.String,java.lang.String,java.lang.String)[pri:4, instance:com.crm.qa.testcases.ContactsPageTest@359df09a]">validateCreateNewContactTest</td> 
+  <td>main@106999035</td>   <td></td> </tr>
+<tr bgcolor="7465a0">  <td>23/02/02 00:34:51</td>   <td>131768</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContactsPageTest.verifyContactsLabel()[pri:1, instance:com.crm.qa.testcases.ContactsPageTest@359df09a]">verifyContactsLabel</td> 
+  <td>main@106999035</td>   <td></td> </tr>
+<tr bgcolor="f170ad">  <td>23/02/02 00:34:24</td>   <td>104538</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.verifyContactsLinkTest()[pri:3, instance:com.crm.qa.testcases.HomePageTest@17fc391b]">verifyContactsLinkTest</td> 
+  <td>main@106999035</td>   <td></td> </tr>
+<tr bgcolor="f170ad">  <td>23/02/02 00:34:01</td>   <td>81395</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.verifyCorrectUsername()[pri:2, instance:com.crm.qa.testcases.HomePageTest@17fc391b]">verifyCorrectUsername</td> 
+  <td>main@106999035</td>   <td></td> </tr>
+<tr bgcolor="f170ad">  <td>23/02/02 00:33:36</td>   <td>57336</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.verifyHomePageTitleTest()[pri:1, instance:com.crm.qa.testcases.HomePageTest@17fc391b]">verifyHomePageTitleTest</td> 
+  <td>main@106999035</td>   <td></td> </tr>
 </table>
